# Drone_C_MPC

./: .gitmodules  CMakeLists.txt  README.md
python/: drone_control.csv  drone_model_simple.py  drone_opt_simple.py  drone_opt_simple_track2.py  drone_simple_acados_ocp.json  drone_state.csv  test.py
python/c_generated_code/: Makefile  acados_solver_drone_simple.c
python/c_generated_code/drone_simple_model/: drone_simple_expl_ode_fun.c  drone_simple_expl_vde_adj.c  drone_simple_expl_vde_forw.c
src/: drone_point.cpp  drone_point.h  drone_test.cpp  drone_test.h
